@@ -2,7 +2,7 @@
 #define STATS_H
 
 #include <stdbool.h>
-#include "tinymt64.h"
+#include <stdint.h>
 
 #define MAX(X, Y) ((X) > (Y) ? (X) : (Y))
 #define MIN(X, Y) ((X) < (Y) ? (X) : (Y))
@@ -16,8 +16,7 @@ typedef struct {
 } errors;
 
 typedef struct {
-    uint64_t samples;
-    uint64_t index;
+    uint64_t count;
     uint64_t limit;
     uint64_t min;
     uint64_t max;
@@ -26,18 +25,15 @@ typedef struct {
 
 stats *stats_alloc(uint64_t);
 void stats_free(stats *);
-void stats_reset(stats *);
-void stats_rewind(stats *);
 
 void stats_record(stats *, uint64_t);
 
-long double stats_summarize(stats *);
 long double stats_mean(stats *);
 long double stats_stdev(stats *stats, long double);
 long double stats_within_stdev(stats *, long double, long double, uint64_t);
 uint64_t stats_percentile(stats *, long double);
 
-void stats_sample(stats *, tinymt64_t *, uint64_t, stats *);
-uint64_t rand64(tinymt64_t *, uint64_t);
+uint64_t stats_popcount(stats *);
+uint64_t stats_value_at(stats *stats, uint64_t, uint64_t *);
 
 #endif /* STATS_H */
